1. 마이페이지 찜 ui 토글 기능 추가 2. 전체검색 기능 추가 3. 전체 검색 시 결과 없을 때 콘텐츠 없음 표시 필요 ()